src/objects/File_Upload__c/File_Upload__c.object-meta.xml
<CustomObject>
    <label>Supporting Material</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>File Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporting Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>