src/objects/File_Upload__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Used to identify type of supporting material</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Supporting_Material_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Overview</fullName>
            </value>
            <value>
                <fullName>Network Overview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>