src/objects/File_Upload__c/fields/Frame_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Frame_Contract_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Apttus__APTS_Agreement__c.Apttus__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Supporting Materials</relationshipLabel>
    <relationshipName>Supporting_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>