src/objects/File_Upload__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Technology__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>eNB User Capacity</fullName>
            </value>
            <value>
                <fullName>Load Balancing</fullName>
            </value>
            <value>
                <fullName>Air interface UL</fullName>
            </value>
            <value>
                <fullName>Air interface DL</fullName>
            </value>
            <value>
                <fullName>VoLTE</fullName>
            </value>
            <value>
                <fullName>Transport / security</fullName>
            </value>
            <value>
                <fullName>LTE Evolution</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Spectrum Use</fullName>
            </value>
            <value>
                <fullName>NW Coverage &amp; Quality &amp; NPO</fullName>
            </value>
            <value>
                <fullName>WCDMA Voice Quality</fullName>
            </value>
            <value>
                <fullName>WBTS Capacity</fullName>
            </value>
            <value>
                <fullName>RNC Capacity</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Load Balancing &amp; Interworking</fullName>
            </value>
            <value>
                <fullName>3G Core Benchmark – Network Overview</fullName>
            </value>
            <value>
                <fullName>MSS &amp; MGW Capacity</fullName>
            </value>
            <value>
                <fullName>MSS &amp; MGW Performance</fullName>
            </value>
            <value>
                <fullName>3G Core Voice Quality</fullName>
            </value>
            <value>
                <fullName>3G Core Service Enablers</fullName>
            </value>
            <value>
                <fullName>IMS VoLTE Core Benchmark – Network Overview</fullName>
            </value>
            <value>
                <fullName>CFX-5000 &amp; TAS Capacity</fullName>
            </value>
            <value>
                <fullName>CFX-5000 &amp; TAS Performance</fullName>
            </value>
            <value>
                <fullName>Voice Interworking Performance</fullName>
            </value>
            <value>
                <fullName>IMS VoLTE Core Service Enablers</fullName>
            </value>
            <value>
                <fullName>NT-HLR Capacity</fullName>
            </value>
            <value>
                <fullName>HSS Capacity</fullName>
            </value>
            <value>
                <fullName>One-NDS Capacity</fullName>
            </value>
            <value>
                <fullName>LTE Air-interface DL</fullName>
                <isActive>false</isActive>
                <label>LTE Air-interface DL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>