src/objects/File_Upload__c/validationRules/AM_and_PM_cant_create_CXM_SM.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_and_PM_cant_create_CXM_SM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR($Permission.SWX_CCRE_Account_manager = TRUE, $Permission.SWX_CCRE_Pricing_manager =TRUE),ISPICKVAL(Supporting_Material_Type__c , &apos;CXM&apos;))</errorConditionFormula>
    <errorMessage>Account Manager and Pricing manager cannot create CXM Supporting Material</errorMessage>
</ValidationRule>