src/objects/File_Upload__c/validationRules/No_Use_Case_for_Network_overview.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Use_Case_for_Network_overview</fullName>
    <active>false</active>
    <description>Cannot select Use case, if network overview checkbox is true</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Document_Type__c , &apos;Network Overview&apos;) ,
 NOT(TEXT(Use_Case__c) = Null)
)</errorConditionFormula>
    <errorMessage>Use case should be None for Network Overview</errorMessage>
</ValidationRule>