src/objects/File_Upload__c/validationRules/PM_and_SM_cant_create_RMP_SM.validationRule-meta.xml
<ValidationRule>
    <fullName>PM_and_SM_cant_create_RMP_SM</fullName>
    <active>true</active>
    <description>Proposal Manager and Solution Manager cannot create RMP Supporting Material</description>
    <errorConditionFormula>AND(OR( $Permission.SWX_CCRE_Proposal_Manager  = TRUE,  $Permission.SWX_CCRE_Solution_Manager  =TRUE),ISPICKVAL(Supporting_Material_Type__c , &apos;New Feature Release&apos;))</errorConditionFormula>
    <errorMessage>Proposal Manager and Solution Manager cannot create RMP Supporting Material</errorMessage>
</ValidationRule>