src/objects/File_Upload__c/validationRules/PO_and_FC_not_required_for_CXM.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_and_FC_not_required_for_CXM</fullName>
    <active>true</active>
    <description>PO_and_FC_not_required_for_CXM</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Supporting_Material_Type__c , &apos;CXM&apos;), 
OR(Frame_Contract_Reference__c &lt;&gt; Null,Purchase_Order__c 
&lt;&gt; Null) 
)</errorConditionFormula>
    <errorMessage>Agreement and Customer Purchase Order should not be populated for CXM Supporting Material</errorMessage>
</ValidationRule>