src/objects/File_Upload__c/validationRules/PO_and_FC_required_for_contract_overview.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_and_FC_required_for_contract_overview</fullName>
    <active>true</active>
    <description>PO_and_FC_required_for_contract_overview supporting material</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Supporting_Material_Type__c , &apos;New Feature Release&apos;) ,
 ISPICKVAL(Document_Type__c , &apos;Contract Overview&apos;),
 OR(Frame_Contract_Reference__c = Null,Purchase_Order__c = Null) 
)</errorConditionFormula>
    <errorMessage>Agreement and Customer Purchase Order required for Contract Overview Supporting Material</errorMessage>
</ValidationRule>